Update project metadata and remove research files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "tts-sync"
 version = "0.1.0"
 edition = "2021"
 description = "A library for synchronizing TTS with video and subtitles, with advanced audio processing and tempo adjustment"
-authors = ["Manus <info@manus.ai>"]
+authors = ["Pavel Pavlenko + AI <region23@gmail.com>"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/manus-ai/tts-sync"
+repository = "https://github.com/region23/tts-sync"
 documentation = "https://docs.rs/tts-sync"
 readme = "README.md"
 keywords = ["tts", "audio", "subtitles", "synchronization", "video"]
